--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
+    "lucide-react": "^0.555.0",
     "mongoose": "^9.0.0",
     "next": "13.4.8",
     "react": "18.2.0",
@@ -21,7 +22,7 @@
     "world-countries": "^5.1.0"
   },
   "devDependencies": {
-    "@svgr/webpack": "^8.0.1",
+    "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
