--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "test": "jest --watchAll"
   },
   "dependencies": {
+    "cloudinary": "^2.8.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
+    "formidable": "^3.5.4",
     "lucide-react": "^0.555.0",
     "mongoose": "^9.0.0",
     "next": "13.4.8",
+    "next-cloudinary": "^6.17.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^6.0.2",
